Add a demo website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
+
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>架空の喫茶店</title>
+</head>
+
+
 <body>
-<p>TEST PAGE</p>
+    <div class="header">
 </body>
+
+
+<footer>
+    (c) xxxxxx All Rights Reserved.
+</footer>
 </html>
