--- a/index.html
+++ b/index.html
@@ -1,20 +1,66 @@
 <!DOCTYPE html>
 <html lang="ja">
-
-
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
     <title>架空の喫茶店</title>
 </head>
-
-
 <body>
-    <div class="header">
+    <div class="header"> 
+    <div class="header-contents">    
+        <ul>
+            <li><img src="img/port_img_logo.PNG" alt="";width="200px" height="50px"></li>
+            <li><a class="#INFORMATION" href="#INFORMATION">INFORMATION</a></li>
+            <li><a href="#COFFEE">COFFEE</a></li>
+            <li><a href="#MENU">MENU</a></li>
+            <li><a href="#HOME">HOME</a></li>
+        </ul>
+    </div>
+    </div>
+
+    <div id="contents"> 
+    <img src="img/coffee-2561635_1280.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
+    </div>
+  <!-- 中上カラム-->
+  <div class ="About">
+<img src="img/CONTENTS.PNG" alt=""style= "" width="700px" height="400px" border="0"/>
+</div>
+<!-- ニュース（中央カラム） -->
+<div class="news">
+<h2>NEWS</h2>
+<ul>
+    <li>
+        <h4>2017/s/x/</h4>
+        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+        <h4>2017/s/s/</h4>
+        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+        <h4>2017/s/x/</h4>
+        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+    </li>
+</ul>
+</div>
+<!-- 下カラム-->
+<div class="cp_cssslider">
+	<div class="cp_slidewrapper">
+		<div class="cp_slide_item"><img src="img/cupcakes-690040_1280.jpg"></div>
+	</div>
+</div>
+
+
+<!-- フッター -->
+<footer id="footer">
+        <div class="inner">
+          <nav class="footer-link">
+            <ul>
+              <li><a href="#お問い合わせ">お問い合わせ</a></li>
+              <li><a href="#店舗検索">店舗検索</a></li>
+              <li><a href="#採用情報">採用情報</a></li>
+              <li><a href="#お客様の声">お客様の声</a></li>
+              <li><a href="#その他">その他</a></li>
+            </ul>
+          </nav>
+          <p class="copyright">Copyright&copy;AAAA. All Rights Reserved.</p>
+        </div>
+      </footer>
 </body>
-
-
-<footer>
-    (c) xxxxxx All Rights Reserved.
-</footer>
 </html>
