--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="header"> 
     <div class="header-contents">    
         <ul>
-            <li><img src="img/port_img_logo.jpg" alt=""width="200px" height="50px"></li>
+            <li><img src="img/port_img_logo.png" alt=""width="200px" height="50px"></li>
             <li><a class="#INFORMATION" href="#INFORMATION">INFORMATION</a></li>
             <li><a href="#COFFEE">COFFEE</a></li>
             <li><a href="#MENU">MENU</a></li>
@@ -23,7 +23,7 @@
     </div>
   <!-- 中上カラム-->
   <div class ="About">
-<img src="img/CONTENTS.jpg" alt="" width="700px" height="400px" border="0"/>
+<img src="img/CONTENTS.png" alt="" width="700px" height="400px" border="0"/>
 </div>
 <!-- ニュース（中央カラム） -->
 <div class="news">
