--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styles.css">
-    <title>架空の喫茶店</title>
+    <title>シカクケイ</title>
 </head>
 <body>
     <div class="header"> 
     <div class="header-contents">    
         <ul>
-            <li><img src="img/port_img_logo.png" alt=""width="200px" height="50px"></li>
             <li><a class="#INFORMATION" href="#INFORMATION">INFORMATION</a></li>
             <li><a href="#COFFEE">COFFEE</a></li>
             <li><a href="#MENU">MENU</a></li>
@@ -17,11 +16,14 @@
         </ul>
     </div>
     </div>
-
-    <div id="contents"> 
-    <img src="img/coffee-2561635_1280.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
-    </div>
-
+<!-- コンテンツ -->
+   <h2>事業計画</h2>
+<p>
+当サークルシカクケイは『誰よりも素晴らしい作品』をモットーに<br />
+社会に貢献し、ステキな作品を皆様にお届けするサークルです<br />
+イラストや音楽、はたまた手芸まで作ります。<br />
+ぜひともよろしくお願いします。まずはお問合せから気軽にご連絡ください<br />
+</p>
 <!-- フッター -->
 <footer id="footer">
         <div class="inner">
@@ -33,7 +35,7 @@
               <li><a href="#その他">その他</a></li>
             </ul>
           </nav>
-          <p class="copyright">Copyright&copy;AAAA. All Rights Reserved.</p>
+          <p class="copyright">Copyright&copy;シカクケイ. All Rights Reserved.</p>
         </div>
       </footer>
 </body>
