--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
     </div>
     </div>
 <!-- コンテンツ -->
-   <h2>事業計画</h2>
-<p>
-当サークルシカクケイは『誰よりも素晴らしい作品』をモットーに<br />
-社会に貢献し、ステキな作品を皆様にお届けするサークルです<br />
-イラストや音楽、はたまた手芸まで作ります。<br />
-ぜひともよろしくお願いします。まずはお問合せから気軽にご連絡ください<br />
-</p>
+   <div class="About"> 
+    <div class="header-contents">    
+        <ul>
+            <li><a class="#INFORMATION" href="#INFORMATION">シカクケイ</a></li>
+            <li><a href="#COFFEE">COFFEE</a></li>
+            <li><a href="#MENU">MENU</a></li>
+            <li><a href="#HOME">HOME</a></li>
+        </ul>
+    </div>
+    </div>
 <!-- フッター -->
 <footer id="footer">
         <div class="inner">
