--- a/index.html
+++ b/index.html
@@ -26,7 +26,36 @@
             <li><a href="#HOME">HOME</a></li>
         </ul>
     </div>
+    </div>    
+    <div id="contents"> 
+    <img src="img/coffee-2561635_1280.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
     </div>
+  <!-- 中上カラム-->
+  <div class ="About">
+<img src="img/CONTENTS.png" alt=""style= "" width="700px" height="400px" border="0"/>
+</div>
+<!-- ニュース（中央カラム） -->
+<div class="news">
+<h2>NEWS</h2>
+<ul>
+    <li>
+        <h4>2017/s/x/</h4>
+        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+        <h4>2017/s/s/</h4>
+        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+        <h4>2017/s/x/</h4>
+        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+    </li>
+</ul>
+</div>
+<!-- 下カラム-->
+<div class="cp_cssslider">
+	<div class="cp_slidewrapper">
+		<div class="cp_slide_item"><img src="img/cupcakes-690040_1280.jpg"></div>
+	</div>
+</div>
+
+
 <!-- フッター -->
 <footer id="footer">
         <div class="inner">
