--- a/index.html
+++ b/index.html
@@ -16,19 +16,11 @@
         </ul>
     </div>
     </div>
-<!-- コンテンツ -->
-   <div class="About"> 
-    <div class="header-contents">    
-        <ul>
-            <li><a class="#INFORMATION" href="#INFORMATION">シカクケイ</a></li>
-            <li><a href="#COFFEE">COFFEE</a></li>
-            <li><a href="#MENU">MENU</a></li>
-            <li><a href="#HOME">HOME</a></li>
-        </ul>
-    </div>
-    </div>    
+<!-- コンテンツ -->  
     <div id="contents"> 
-    <img src="img/coffee-2561635_1280.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
+    <img src="img/エレキギターのアイコン2.png" alt=""style="margin: 50px 100px;" width="200px" height="100px" border="0" />
+    <img src="img/万年筆のペン先アイコン.png" alt=""style="margin: 80px 110px;" width="200px" height="100px" border="0" />   	    
+    <img src="img/円を積み上げたお金アイコン2.png" alt=""style="margin: 90px 120px;" width="200px" height="100px" border="0" />   
     </div>
   <!-- 中上カラム-->
   <div class ="About">
