--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   <!-- 中上カラム-->
   <div class ="About">
-<img src="img/CONTENTS.png" alt=""style= "" width="700px" height="400px" border="0"/>
+<img src="img/CONTENTS.jpg" alt=""style= "" width="700px" height="400px" border="0"/>
 </div>
 <!-- ニュース（中央カラム） -->
 <div class="news">
@@ -43,7 +43,7 @@
 <!-- 下カラム-->
 <div class="cp_cssslider">
 	<div class="cp_slidewrapper">
-		<div class="cp_slide_item"><img src="img/cupcakes-690040_1280.jpg"></div>
+		<div class="cp_slide_item"><img src="img/illustkujira.jpg"></div>
 	</div>
 </div>
 
