--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </div>
 <!-- コンテンツ -->  
     <div id="contents"> 
-    <img src="img/エレキギターのアイコン2.png" alt=""style="margin: 50px 100px;" width="200px" height="100px" border="0" />
-    <img src="img/万年筆のペン先アイコン.png" alt=""style="margin: 40px 90px;" width="200px" height="100px" border="0" />   	    
+    <img src="img/illustkujira.png" alt=""style="margin: 50px 100px;" width="200px" height="100px" border="0" />	    
     <img src="img/円を積み上げたお金アイコン2.png" alt=""style="margin: 90px 120px;" width="200px" height="100px" border="0" />   
     </div>
   <!-- 中上カラム-->
@@ -31,12 +30,8 @@
 <h2>NEWS</h2>
 <ul>
     <li>
-        <h4>2017/s/x/</h4>
-        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
-        <h4>2017/s/s/</h4>
-        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
-        <h4>2017/s/x/</h4>
-        <p><span style="text-decoration: underline">xxxxxxxxxxxxxxxxxx</span></p>
+        <h4>2019/1/28/</h4>
+        <p><span style="text-decoration: underline">サイト開設</span></p>
     </li>
 </ul>
 </div>
