--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     </div>
 <!-- コンテンツ -->  
     <div id="contents"> 
-    <img src="img/illustkujira.png" alt=""style="margin: 50px 100px;" width="200px" height="100px" border="0" />	    
-    <img src="img/円を積み上げたお金アイコン2.png" alt=""style="margin: 90px 120px;" width="200px" height="100px" border="0" />   
+    <img src="img/"img/illustkujira.png" alt=""style="margin: 90px 120px;" width="200px" height="100px" border="0" />   
     </div>
   <!-- 中上カラム-->
   <div class ="About">
