--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
         </ul>
     </div>
     </div>
-<!-- コンテンツ -->  
     <div id="contents"> 
-    <img src="img/illustkujira.jpg" alt=""style="margin: 50px 100px;" width="200px" height="100px" border="0" />	    
+    <img src="illustkujira.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
     </div>
   <!-- 中上カラム-->
   <div class ="About">
@@ -37,10 +36,9 @@
 <!-- 下カラム-->
 <div class="cp_cssslider">
 	<div class="cp_slidewrapper">
-		<div class="cp_slide_item"><img src="img/illustkujira.jpg"></div>
+		<div class="cp_slide_item"><img src="img/cupcakes-690040_1280.jpg"></div>
 	</div>
 </div>
-
 
 <!-- フッター -->
 <footer id="footer">
