--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     </div>
     <div id="contents"> 
-    <img src="illustkujira.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
+    <img src="img/illustkujira.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
     </div>
   <!-- 中上カラム-->
   <div class ="About">
