--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         </ul>
     </div>
     </div>
+   <div id="contents"> 
+    <img src="img/coffee-2561635_1280.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
+    </div>
   <!-- 中上カラム-->
   <div class ="About">
-<img src="img/CONTENTS.jpg" alt=""style= "" width="700px" height="400px" border="0"/>
-<img src="img/illustkujira.jpg" alt=""style="margin: 50px 100px;" width="500px" height="400px" border="0" />    
-    </div>	  
+<img src="img/CONTENTS.png" alt=""style= "" width="700px" height="400px" border="0"/>
 </div>
 <!-- ニュース（中央カラム） -->
 <div class="news">
@@ -38,6 +39,7 @@
 		<div class="cp_slide_item"><img src="img/cupcakes-690040_1280.jpg"></div>
 	</div>
 </div>
+
 
 <!-- フッター -->
 <footer id="footer">
