--- a/index.html
+++ b/index.html
@@ -36,24 +36,9 @@
 <!-- 下カラム-->
 <div class="cp_cssslider">
 	<div class="cp_slidewrapper">
-		<div class="cp_slide_item"><img src="img/cupcakes-690040_1280.jpg"></div>
+		<div class="cp_slide_item"><img src="img/illustkujira.jpg"></div>
 	</div>
 </div>
 
 
-<!-- フッター -->
-<footer id="footer">
-        <div class="inner">
-          <nav class="footer-link">
-            <ul>
-              <li><a href="#お問い合わせ">お問い合わせ</a></li>
-              <li><a href="#採用情報">採用情報</a></li>
-              <li><a href="#お客様の声">お客様の声</a></li>
-              <li><a href="#その他">その他</a></li>
-            </ul>
-          </nav>
-          <p class="copyright">Copyright&copy;シカクケイ. All Rights Reserved.</p>
-        </div>
-      </footer>
-</body>
-</html>
+
