--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   <!-- 中上カラム-->
   <div class ="About">
-<img src="img/CONTENTS.png" alt=""style= "" width="700px" height="400px" border="0"/>
+<img src="img/CONTENTS.jpg" alt=""style= "" width="700px" height="400px" border="0"/>
 </div>
 <!-- ニュース（中央カラム） -->
 <div class="news">
